[tool.poetry]
name = "pytesting"
version = "0.1.0"
description = ""
authors = ["codinci <dkibau@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pyleniumio = "^1.15.4"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
